2002-04-10  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m-image.el (w3m-imagick-convert-data): Check buffer size.
	(w3m-imagick-start-convert-data): Ditto.
	(w3m-imagick-start-convert-buffer): Don't use output file
	(Because it sometimes causes multiple files).

2002-04-10  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3mhack.el (w3mhack-examine-modules): Reverse the turn of the
	load with `bitmap' and `un-define'.

2002-04-09  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-bitmap.el (w3m-bitmap-image-face): New face.
	(w3m-bitmap-image-insert-internal): Put text properties.
	(w3m-bitmap-image-insert): Pass text properties argument to
	`w3m-bitmap-image-insert-internal'.
	(w3m-bitmap-image-add-text-properties): Remove.
	(w3m-insert-image): Pass text properties to
	`w3m-bitmap-image-insert'.

2002-04-09  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-bitmap.el (w3m-bitmap-image-get-overlay): Use
	`line-beginning-position' and/or `line-end-position'.
	(w3m-bitmap-image-insert-internal): Ditto.
	(w3m-bitmap-image-delete-internal): Ditto.
	(w3m-bitmap-image-add-text-properties): Ditto.

	* w3m-om.el: Require `w3m-bitmap' if BITMAP-MULE is available.
	(move-to-column-force): Define it if void.

2002-04-09  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m-bitmap.el: Convert CRLF to LF.
	(w3m-display-graphic-p): Ruturn nil if no window-system.
	(w3m-image-type-available-p): Ruturn nil if not found "convert".

	* w3mhack.el (w3mhack-examine-modules): Don't byte-compile
	w3m-bitmap.el under XEmacs or FSF Emacs-21.

	* w3m.el (w3m-fontify): When delete duplicated empty line, keep
	'w3m-name-anchor property surely.

	* w3m-e20.el (top): Require 'w3m-bitmap if have BITMAP.

2002-04-09  Taiki SUGAWARA  <taiki.s@cityfujisawa.ne.jp>

	* w3mhack.el (w3mhack-examine-modules): Don't byte-compile
	w3m-bitmap.el if bitmap.el is not installed.
	(w3mhack-examine-modules): Add condition to w3m-bitmap.el check.

	* w3m-bitmap.el: New file.

	* w3m-e20.el (w3m-create-image, w3m-insert-image,